Login Page Editted

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -33,31 +33,25 @@
         <div class="card-body">
           <form action="/login" method="POST">
             <div class="form-group">
-              <div class="form-label-group">
-                <input
-                  name="email"
-                  type="email"
-                  id="inputEmail"
-                  class="form-control"
-                  placeholder="Email"
-                  required
-                  autofocus
-                />
-                <label for="inputEmail">Email address</label>
-              </div>
+              <input
+                name="email"
+                type="email"
+                id="inputEmail"
+                class="form-control"
+                placeholder="Enter Email Address"
+                required
+                autofocus
+              />
             </div>
             <div class="form-group">
-              <div class="form-label-group">
-                <input
-                  name="password"
-                  type="password"
-                  id="inputPassword"
-                  class="form-control"
-                  placeholder="Password"
-                  required
-                />
-                <label for="inputPassword">Password</label>
-              </div>
+              <input
+                name="password"
+                type="password"
+                id="inputPassword"
+                class="form-control"
+                placeholder="Enter Password"
+                required
+              />
             </div>
             <button type="submit" class="btn btn-primary btn-block">
               Login
